--- a/europecv.cls
+++ b/europecv.cls
@@ -1,7 +1,7 @@
 %!TEX encoding = UTF-8 Unicode
 %
 % European curriculum vitae class
-% Author: Nicola Vitacolonna (vitacolo@dimi.uniud.it)
+% Author: Nicola Vitacolonna (vitacolo@dimi.uniud.it), Giuseppe Silano (giuseppe.silano@unisannio.it)
 % This material is subject to the LaTeX Project Public License.
 % See  http://www.ctan.org/tex-archive/help/Catalogue/licenses.lppl.html
 % for the details of that license
