--- a/europecv.cls
+++ b/europecv.cls
@@ -1,12 +1,12 @@
 %!TEX encoding = UTF-8 Unicode
 %
 % European curriculum vitae class
-% Author: Nicola Vitacolonna (vitacolo@dimi.uniud.it), Giuseppe Silano (giuseppe.silano@unisannio.it)
-% This material is subject to the LaTeX Project Public License.
-% See  http://www.ctan.org/tex-archive/help/Catalogue/licenses.lppl.html
+% Author: Nicola Vitacolonna (vitacolo@dimi.uniud.it) and Giuseppe Silano (giuseppe.silano@unisannio.it)
+% This material is subject to the LaTeX Project Public License Version 1.3c
+% See  https://ctan.mirror.garr.it/mirrors/CTAN/help/Catalogue/licenses.lppl.html
 % for the details of that license
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{europecv}[2006/04/24 (beta+Unicode TeX detection) European curriculum vitae class]
+\ProvidesClass{europecv}[2018/07/12 (beta+Unicode TeX detection) European curriculum vitae class]
 
 % CV models and instructions:
 %   http://europass.cedefop.eu.int/htm/index.htm
