--- a/europecv.tex
+++ b/europecv.tex
@@ -52,7 +52,7 @@
     Department of Engineering\\
     University of Sannio in Benevento, Italy\\
 }
-\date{\today}
+\date{July 12, 2018}
 
 
 \begin{document}
