Some changes to fix #2

--- a/europecv.cls
+++ b/europecv.cls
@@ -357,7 +357,8 @@
 \newcommand*{\ecvname}[1]{\def\ecv@name{#1}} % Replaces the above
 \newcommand*{\ecvfootername}[1]{\def\ecv@footername{#1}}
 \newcommand*{\ecvaddress}[1]{\def\ecv@address{#1}}
-\newcommand*{\ecvtelephone}[3][]{\def\ecv@telephone{#3}\def\ecv@mobile{#2}\def\ecv@office{#1}}
+\newcommand*{\ecvtelephone}[3][]{\def\ecv@telephone{#2}\def\ecv@mobile{#1}\def\ecv@office{#3}}
+\newcommand*{\ecvfax}[1]{\def\ecv@fax{#1}}
 \newcommand*{\ecvemail}[1]{\def\ecv@email{#1}}
 \newcommand*{\ecvprofessional}[1]{\def\ecv@professional{#1}}
 \newcommand*{\ecvskype}[1]{\def\ecv@skype{#1}}
@@ -388,6 +389,7 @@
 \ecvfootername{\ecv@name}
 \ecvaddress{}
 \ecvtelephone{}
+\ecvfax{}
 \ecvemail{}
 \ecvpec{}
 \ecvnationality{}
@@ -408,11 +410,13 @@
 \ifx\@empty\ecv@address\else
 \ecv@addresskey     &\ecv@address   \tabularnewline[5pt]
 \fi
-\ifx\@empty\ecv@telephone\else
-	\ecv@telkey      &\ecv@telephone
-	\ifx\@empty\ecv@mobile\else\qquad\ecv@mobilekey: \ecv@mobile\fi
-	\ifx\@empty\ecv@office\else\qquad\ecv@ufficiokey: \ecv@office\fi
+\ifx\@empty\ecv@telephone  \else         \ecv@telkey      &\ecv@telephone
+\ifx\@empty\ecv@mobile     \else \qquad  \ecv@mobilekey:  \ecv@mobile\fi
+\ifx\@empty\ecv@office     \else \qquad  \ecv@officekey:  \ecv@office\fi
 \tabularnewline[5pt]
+\fi
+\ifx\@empty\ecv@fax\else
+\ecv@faxkey       &\ecv@fax \tabularnewline[5pt]
 \fi
 \ifx\@empty\ecv@email\else
 \ecv@emailkey       &\ecv@email \tabularnewline[5pt]
@@ -601,6 +605,10 @@
 {\end{longtable}}
 
 \renewcommand{\section}[2][10pt]{%
+  {\large{\par\textbf{#2}}}\vspace{#1} & \tabularnewline\nopagebreak
+}
+
+\newcommand{\ecvsection}[2][10pt]{%
   {\large{\par\textbf{#2}}}\vspace{#1} & \tabularnewline\nopagebreak
 }
           
