--- a/europecv.tex
+++ b/europecv.tex
@@ -5,7 +5,6 @@
 \usepackage{lmodern}
 %\usepackage{microtype}
 \usepackage{booktabs}
-\usepackage{maltese}
 
 \usepackage[a4paper,left=2cm,right=2cm,top=2cm,bottom=3cm]{geometry}
 
@@ -52,7 +51,7 @@
     Department of Engineering\\
     University of Sannio in Benevento, Italy\\
 }
-\date{July 13, 2018}
+\date{July 22, 2018}
 
 
 \begin{document}
@@ -154,7 +153,7 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem{\texttt{italian}}{Chooses Italian language.}
 	\ecvitem{\texttt{latvian}}{Chooses Latvian language.}
 	\ecvitem{\texttt{lithuanian}}{Chooses Lithuanian language (translation not yet completed). Note that this option does not work with the~\texttt{OT1} font encoding. Use the \textsf{fontenc} package to select an alternate font encoding, such as~\texttt{T1} (\texttt{\textbackslash usepackage[T1]\{fontenc\}} in the preamble of your document).}
-	\ecvitem{\texttt{maltese}}{Chooses Maltese language. You should use the \texttt{T4} font encoding (put \texttt{\textbackslash usepackage[T4]\{fontenc\}} in the preamble of your document), or include the \textsf{maltese} package and use the commands \texttt{\textbackslash mh}, \texttt{\textbackslash mH} and so on, for~\mh, \mH\ etc\ldots See the \textsf{examples} folder for a couple of examples.}
+	\ecvitem{\texttt{maltese}}{Chooses Maltese language. You should use the \texttt{T4} font encoding (put \texttt{\textbackslash usepackage[T4]\{fontenc\}} font encoding (put \texttt{\textbackslash usepackage[T4]\{fontenc\}} in the preamble of your document), or include the \textsf{maltese} package and use the commands \texttt{\textbackslash mh},  \texttt{\textbackslash mH} and so on, for~\/mh, \/mH\ etc\ldots See the \textsf{examples}.}
 	\ecvitem{\texttt{norwegian}}{Chooses Norwegian language.}
 	\ecvitem{\texttt{polish}}{Chooses Polish language. Note that this option does not work with the~\texttt{OT1} font encoding. Use the \textsf{fontenc} package to select an alternate font encoding, such as~\texttt{T1} (\texttt{\textbackslash usepackage[T1]\{fontenc\}} in the preamble of your document).}
 	\ecvitem{\texttt{portuguese}}{Chooses Portuguese language.}
@@ -217,8 +216,9 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem{\ecv{firstname}\texttt{\{}\textit{name}\texttt{\}}}{\textbf{Deprecated.} Use \ecv{name} and \ecv{footername} instead.}
 	\ecvitem{\ecv{lastname}\texttt{\{}\textit{name}\texttt{\}}}{\textbf{Deprecated.} Use \ecv{name} and \ecv{footername} instead.}
 	\ecvitem{\ecv{address}\texttt{\{}\textit{addr}\texttt{\}}}{Sets the address to \emph{addr}.}
-	\ecvitem{\ecv{telephone}\texttt{[}\textit{mobile}\texttt{]}\texttt{\{}\textit{tel}\texttt{\}}}{Sets the telephone number to \emph{tel} and, optionally, the mobile number to~\emph{mobile}.}
-	\ecvitem{\ecv{mobile}\texttt{\{}\textit{mobile}\texttt{\}}}{Sets the mobile number to \emph{mobile phone}.}
+	\ecvitem{\ecv{fax}\texttt{\{}\textit{fax}\texttt{\}}}{Sets the fax number to \emph{fax}. If you do not have any fax number, you can leave it empty.}
+	\ecvitem{\ecv{telephone}\texttt{[}\textit{office}\texttt{]}\texttt{\{}\textit{mobile}\texttt{\}}\\\texttt{\{}\textit{tel}\texttt{\}}}{Sets the telephone number to \emph{tel} and, optionally, the mobile and the office numbers to~\emph{mobile} and to~\emph{office}, respectively.}
+	\ecvitem{\ecv{fax}\texttt{\{}\textit{fax}\texttt{\}}}{Sets the fax number to \emph{fax}.}
 	\ecvitem{\ecv{email}\texttt{\{}\textit{email}\texttt{\}}}{Sets the email to \emph{email}.}
 	\ecvitem{\ecv{professional}\texttt{\{}\textit{professional}\texttt{\}}}{Sets the professional email to \emph{professional}.}
 	\ecvitem{\ecv{pec}\texttt{\{}\textit{pec}\texttt{\}}}{Sets the PEC email to \emph{PEC}.}
@@ -233,9 +233,9 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem[15pt]{\ecv{personalinfo}\texttt{[}\textit{vspace}\texttt{]}}{Typesets personal information.}
 	\ecvitem{Notes}{\ecv{personalinfo} must appear only inside a \texttt{europecv} environment. Personal information definition commands can appear anywhere before the \texttt{europecv} environment, either in the preamble or in the document.
 		
-		Note that the \ecv{picture} command does not draw anything: your picture is inserted when \ecv{personalinfo} occurs. The picture position can be controlled with \ecv{beforepicture}: for example, \ecv{beforepicture}\texttt{\{\textbackslash raggedright\}} draws the picture on the left, and \ecv{beforepicture}\texttt{\{\textbackslash centering\}} centers the picture.
+	Note that the \ecv{picture} command does not draw anything: your picture is inserted when \ecv{personalinfo} occurs. The picture position can be controlled with \ecv{beforepicture}: for example, \ecv{beforepicture}\texttt{\{\textbackslash raggedright\}} draws the picture on the left, and \ecv{beforepicture}\texttt{\{\textbackslash centering\}} centers the picture.
 		
-		The \ecv{personalinfo} command has an optional argument that tells how much vertical space to leave after the personal information block.}
+	The \ecv{personalinfo} command has an optional argument that tells how much vertical space to leave after the personal information block.}
 \end{europecv}
 
 
@@ -249,11 +249,12 @@ For example, consider the following document:
 	\ecvname{Alan Touring}
 	\ecvfootername{}
 	\ecvaddress{Wilmslow, Cheshire, England}	
-	\ecvtelephone[0000]{0000}{0000}
-	\ecvemail{\href{mailto:alan.turing@alan.turing}{alan.turing@alan.turing}}
-	\ecvprofessional{\href{mailto:alan.turing@alan.turing.work}{alan.turing@alan.turing.work}}
-	\ecvpec{\href{mailto:alan.turin@pec.it}{alan.turin@pec.it}}
-	\ecvskype{alan-tuginr}
+	\ecvtelephone[1234]{5678}{4321}
+	\ecvfax{0055884321}
+	\ecvemail{\href{mailto:alan.touring@alan.turing}{alan.touring@alan.turing}}
+	\ecvprofessional{\href{mailto:alan.touring@alan.touring.work}{alan.touring@alan.touring.work}}
+	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
+	\ecvskype{alan-touring}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
 	\ecvgender{Male}
@@ -271,17 +272,18 @@ The above will produce the following output:
 
 \bigskip\medskip
 {
-	\ecvname{Alan Touring}
-    \ecvfootername{}
-    \ecvaddress{Wilmslow, Cheshire, England}	
-    \ecvtelephone[0000]{0000}{0000}
-    \ecvemail{\href{mailto:alan.turing@alan.turing}{alan.turing@alan.turing}}
-    \ecvprofessional{\href{mailto:alan.turing@alan.turing.work}{alan.turing@alan.turing.work}}
-    \ecvpec{\href{mailto:alan.turin@pec.it}{alan.turin@pec.it}}
-    \ecvskype{alan-tuginr}
-    \ecvnationality{English}
-    \ecvdateofbirth{June 23 1927}
-    \ecvgender{Male}
+   \ecvname{Alan Touring}
+   \ecvfootername{}
+   \ecvaddress{Wilmslow, Cheshire, England}	
+   \ecvtelephone[1234]{5678}{4321}
+   \ecvfax{0055884321}
+   \ecvemail{\href{mailto:alan.touring@alan.turing}{alan.touring@alan.turing}}
+   \ecvprofessional{\href{mailto:alan.touring@alan.touring.work}{alan.touring@alan.touring.work}}
+   \ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
+   \ecvskype{alan-touring}
+   \ecvnationality{English}
+   \ecvdateofbirth{June 23 1927}
+   \ecvgender{Male}
 	\ecvpicture[height=3cm]{examples/at}
 	\fontfamily{phv}\fontseries{mc}\selectfont
 	\renewcommand{\bfdefault}{bc}
@@ -300,11 +302,12 @@ If you do not want to use so much space, you may add some negative space with \e
 	\ecvname{Alan Touring}
 	\ecvfootername{}
 	\ecvaddress{Wilmslow, Cheshire, England}	
-	\ecvtelephone[0000]{0000}{0000}
-	\ecvemail{\href{mailto:alan.turing@alan.turing}{alan.turing@alan.turing}}
-	\ecvprofessional{\href{mailto:alan.turing@alan.turing.work}{alan.turing@alan.turing.work}}
-	\ecvpec{\href{mailto:alan.turin@pec.it}{alan.turin@pec.it}}
-	\ecvskype{alan-tuginr}
+	\ecvtelephone[1234]{5678}{4321}{0055884321}
+	\ecvfax{0055884321}
+	\ecvemail{\href{mailto:alan.touring@alan.turing}{alan.touring@alan.turing}}
+	\ecvprofessional{\href{mailto:alan.touring@alan.touring.work}{alan.touring@alan.touring.work}}
+	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
+	\ecvskype{alan-touring}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
 	\ecvgender{Male}
@@ -324,11 +327,12 @@ The output of the above code looks like this:
 	\ecvname{Alan Touring}
 	\ecvfootername{}
 	\ecvaddress{Wilmslow, Cheshire, England}	
-	\ecvtelephone[0000]{0000}{0000}
-	\ecvemail{\href{mailto:alan.turing@alan.turing}{alan.turing@alan.turing}}
-	\ecvprofessional{\href{mailto:alan.turing@alan.turing.work}{alan.turing@alan.turing.work}}
-	\ecvpec{\href{mailto:alan.turin@pec.it}{alan.turin@pec.it}}
-	\ecvskype{alan-tuginr}
+	\ecvtelephone[1234]{5678}{4321}
+	\ecvfax{0055884321}
+    \ecvemail{\href{mailto:alan.touring@alan.turing}{alan.touring@alan.turing}}
+ 	\ecvprofessional{\href{mailto:alan.touring@alan.touring.work}{alan.touring@alan.touring.work}}
+ 	\ecvpec{\href{mailto:alan.touring@pec.it}{alan.touring@pec.it}}
+ 	\ecvskype{alan-touring}
 	\ecvnationality{English}
 	\ecvdateofbirth{June 23 1927}
 	\ecvgender{Male}
@@ -349,6 +353,7 @@ Note that if your personal data (e.g., your address) is long enough, then some t
 \begin{europecv}
 	\section{Sectioning commands}
 	\ecvitem{\texttt{\textbackslash}{\texttt{section}}\texttt{[}\textit{vspace}\texttt{]}\texttt{\{}\textit{title}\texttt{\}}}{Starts a new section. For example, the current section has been started with \texttt{\textbackslash}{\texttt{section}}\texttt{\{Sectioning commands\}}.}
+	\ecvitem{\texttt{\textbackslash}{\texttt{ecvsection}}\texttt{[}\textit{vspace}\texttt{]}\texttt{\{}\textit{title}\texttt{\}}}{\textbf{Deprecated. It is still available for backward compatibility.} Starts a new section. For example, the current section has been started with \texttt{\textbackslash}{\texttt{ecvsection}}\texttt{\{Sectioning commands\}}.}
 	\ecvitem{\ecv{item}\texttt{[}\textit{vspace}\texttt{]}\texttt{\{}\textit{left}\texttt{\}}\texttt{\{}\textit{right}\texttt{\}}}{Puts \emph{left\/} text on the left of the vertical rule and \emph{right\/} text on the right of the vertical rule.}
 	\ecvitem[15pt]{\ecv{item*}\texttt{[}\textit{vspace}\texttt{]}\texttt{\{}\textit{left}\texttt{\}}\texttt{\{}\textit{right}\texttt{\}}}{\textbf{Deprecated}. The same as above, but produces a small bullet before \emph{left\/} text, as in the next item.}
 	\ecvitem*{Notes}{Sectioning commands must be used inside the \texttt{europecv} environment, and text within the environment should be typeset only inside a sectioning command. All of them have an optional argument that specifies how much vertical space to leave \emph{after} that command. For instance, the previous item has been specified by
