--- a/templates/cv_template_en.tex
+++ b/templates/cv_template_en.tex
@@ -18,7 +18,7 @@
 \ecvname{Name, Surname}
 \ecvfootername{Name, Surname}
 \ecvaddress{(Remove if not relevant)}
-\ecvtelephone[(Remove if not relevant)]{(Remove if not relevant)}{(Remove if not relevant)}
+\ecvtelephone[(Remove if not relevant)][(Remove if not relevant)]{(Remove if not relevant)}
 \ecvfax{(Remove if not relevant)}
 \ecvemail{\href{mailto:email@gemail.com}{email@email.com}}
 \ecvprofessional{\href{mailto:email@email.it}{email@email.it}}
