Minor changes before release
Minor changes before to release the package

--- a/europecv.tex
+++ b/europecv.tex
@@ -51,7 +51,7 @@
     Department of Engineering\\
     University of Sannio in Benevento, Italy\\
 }
-\date{July 22, 2018}
+\date{July 23, 2018}
 
 
 \begin{document}
@@ -218,7 +218,6 @@ The following options can be used with the \texttt{\textbackslash documentclass}
 	\ecvitem{\ecv{address}\texttt{\{}\textit{addr}\texttt{\}}}{Sets the address to \emph{addr}.}
 	\ecvitem{\ecv{fax}\texttt{\{}\textit{fax}\texttt{\}}}{Sets the fax number to \emph{fax}. If you do not have any fax number, you can leave it empty.}
 	\ecvitem{\ecv{telephone}\texttt{[}\textit{mobile}\texttt{]}\texttt{[}\textit{office}\texttt{]}\\\texttt{\{}\textit{tel}\texttt{\}}}{Sets the telephone number to \emph{tel} and, optionally, the mobile and the office numbers to~\emph{mobile} and to~\emph{office}, respectively.}
-	\ecvitem{\ecv{fax}\texttt{\{}\textit{fax}\texttt{\}}}{Sets the fax number to \emph{fax}.}
 	\ecvitem{\ecv{email}\texttt{\{}\textit{email}\texttt{\}}}{Sets the email to \emph{email}.}
 	\ecvitem{\ecv{professional}\texttt{\{}\textit{professional}\texttt{\}}}{Sets the professional email to \emph{professional}.}
 	\ecvitem{\ecv{pec}\texttt{\{}\textit{pec}\texttt{\}}}{Sets the PEC email to \emph{PEC}.}
@@ -579,7 +578,7 @@ The \textsf{europecv} class uses standard \LaTeX\ relative font sizes, so there 
 \textbf{\large{7\hspace{0.5cm}Acknowledgments}}
 \vspace{0.25cm}
 
-Thanks to \textbf{Johann} for adding Norwegian language definitions, to \textbf{Thomas Clijsner} for Dutch language definitions, to \textbf{Ivan Lloro Boada} for Catalan language definitions, to \textbf{Petres Zolt\'an} for Hungarian language definitions and several bug fixes, to \textbf{Nemanja} for Serbian language definitions and to \textbf{Henrique Ferreiro} for Galician language definitions. Thanks to \textbf{Axel Kielhorn} for providing a complete German translation and a German template, to \textbf{Andrzej Lichnerowicz} for providing a complete Polish translation and a Polish template file, and to \textbf{Jo\"el Rouvi\`ere} for providing a complete French translation. Thanks to \textbf{Antonio Ospite} for providing the first version of a vector image of the Europass logo, and to \textbf{Jo\~ao Ventura} for providing the current vector pictures of the Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item marks. 
+Thanks to \textbf{Johann} for adding Norwegian language definitions, to \textbf{Thomas Clijsner} for Dutch language definitions, to \textbf{Ivan Lloro Boada} for Catalan language definitions, to \textbf{Petres Zolt\'an} for Hungarian language definitions and several bug fixes, to \textbf{Nemanja} for Serbian language definitions and to \textbf{Henrique Ferreiro} for Galician language definitions. Thanks to \textbf{Axel Kielhorn} for providing a complete German translation and a German template, to \textbf{Andrzej Lichnerowicz} for providing a complete Polish translation and a Polish template file, and to \textbf{Jo\"el Rouvi\`ere} for providing a complete French translation. Thanks to \textbf{Antonio Ospite} for providing the first version of a vector image of the Europass logo, and to \textbf{Jo\~ao Ventura} for providing the current vector pictures of the Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item marks. Thanks to \textbf{J\"urgen Spitzm\"uller} for fixing the bug into the 2018.07.22 package release.
 
 \vspace{0.5cm}
 \textbf{\large{8\hspace{0.5cm}Disclaimer}}
