--- a/europecv.cls
+++ b/europecv.cls
@@ -6,7 +6,7 @@
 % See  https://ctan.mirror.garr.it/mirrors/CTAN/help/Catalogue/licenses.lppl.html
 % for the details of that license
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{europecv}[2018/07/23 (Unicode TeX detection) European curriculum vitae class]
+\ProvidesClass{europecv}[2018/10/15 (Unicode TeX detection) European curriculum vitae class]
 
 % CV models and instructions:
 %   http://europass.cedefop.eu.int/htm/index.htm
@@ -403,6 +403,7 @@
 \ecvname{\ecv@lastname\ \ecv@firstname}
 \ecvfootername{\ecv@name}
 \ecvaddress{}
+\ecvhomepage{}
 \ecvskype{}
 \ecvprofessional{}
 \ecvtelephone{}
@@ -448,6 +449,9 @@
 \fi
 \ifx\@empty\ecv@pec\else
 \ecv@peckey       &\ecv@pec \tabularnewline[5pt]
+\fi
+\ifx\@empty\ecv@homepage\else
+\ecv@homepagekey      & \ecv@homepage \tabularnewline[#1]
 \fi
 \ifx\@empty\ecv@skype\else
 \ecv@skypekey       &\ecv@skype \tabularnewline[5pt]
