Ready for the 2019.01.25 release

--- a/europecv.tex
+++ b/europecv.tex
@@ -51,7 +51,7 @@
     Department of Engineering\\
     University of Sannio in Benevento, Italy\\
 }
-\date{October 15, 2018}
+\date{January 25, 2019}
 
 
 \begin{document}
@@ -654,7 +654,20 @@ The \textsf{europecv} class uses standard \LaTeX\ relative font sizes, so there 
 \textbf{\large{7\hspace{0.5cm}Acknowledgments}}
 \vspace{0.25cm}
 
-Thanks to \textbf{Johann} for adding Norwegian language definitions, to \textbf{Thomas Clijsner} for Dutch language definitions, to \textbf{Ivan Lloro Boada} for Catalan language definitions, to \textbf{Petres Zolt\'an} for Hungarian language definitions and several bug fixes, to \textbf{Nemanja} for Serbian language definitions and to \textbf{Henrique Ferreiro} for Galician language definitions. Thanks to \textbf{Axel Kielhorn} for providing a complete German translation and a German template, to \textbf{Andrzej Lichnerowicz} for providing a complete Polish translation and a Polish template file, and to \textbf{Jo\"el Rouvi\`ere} for providing a complete French translation. Thanks to \textbf{Antonio Ospite} for providing the first version of a vector image of the Europass logo, and to \textbf{Jo\~ao Ventura} for providing the current vector pictures of the Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item marks. Thanks to \textbf{J\"urgen Spitzm\"uller} and \textbf{lgelmi} for fixing the bugs into the 2018.07.22 and 2018.09.02 package release, respectively. Thanks to \textbf{redlulz} for fixing the German translation (2018.10.12).
+Thanks to \textbf{Johann} for adding Norwegian language definitions, to \textbf{Thomas Clijsner} 
+for Dutch language definitions, to \textbf{Ivan Lloro Boada} for Catalan language definitions, to 
+\textbf{Petres Zolt\'an} for Hungarian language definitions and several bug fixes, to 
+\textbf{Nemanja} for Serbian language definitions and to \textbf{Henrique Ferreiro} for Galician 
+language definitions. Thanks to \textbf{Axel Kielhorn} for providing a complete German translation 
+and a German template, to \textbf{Andrzej Lichnerowicz} for providing a complete Polish translation 
+and a Polish template file, and to \textbf{Jo\"el Rouvi\`ere} for providing a complete French 
+translation. Thanks to \textbf{Antonio Ospite} for providing the first version of a vector image of 
+the Europass logo, and to \textbf{Jo\~ao Ventura} for providing the current vector pictures of the 
+Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item marks. Thanks to 
+\textbf{J\"urgen Spitzm\"uller} and \textbf{lgelmi} for fixing the bugs into the 2018.07.22 and 
+2018.09.02 package releases, respectively. Thanks to \textbf{redlulz} and \textbf{Emil 
+Gardstr\"{o}m} for fixing the German (2018.10.12) and Swedish (2019.01.25) translation, 
+respectively.
 
 \vspace{0.5cm}
 \textbf{\large{8\hspace{0.5cm}Disclaimer}}
