--- a/templates/cv_template_en.tex
+++ b/templates/cv_template_en.tex
@@ -28,6 +28,7 @@
 \ecvnationality{(Remove if not relevant)}
 \ecvdateofbirth{(Remove if not relevant)}
 \ecvgender{(Remove if not relevant)}
+\ecvdate{\today}
 %\ecvpicture[width=3cm]{mypicture}
 %\ecvfootnote{For further details please take a look here: \url{http://europass.cedefop.eu.int}\\
 %\textcopyright~European Communities, 2003.}
