Ready to new release

--- a/europecv.tex
+++ b/europecv.tex
@@ -51,7 +51,7 @@
     Department of Engineering\\
     University of Sannio in Benevento, Italy\\
 }
-\date{January 31, 2019}
+\date{February 4, 2019}
 
 
 \begin{document}
@@ -673,7 +673,7 @@ Europass logo. Thanks to \textbf{Roman Bertle} for suggesting to redefine item m
 \textbf{J\"urgen Spitzm\"uller} and \textbf{lgelmi} for fixing the bugs into the 2018.07.22 and 
 2018.09.02 package releases, respectively. Thanks to \textbf{redlulz} and \textbf{Emil 
 Gardstr\"{o}m} for fixing the German (2018.10.12) and Swedish (2019.01.25) translation, 
-respectively.
+respectively. Thanks to \textbf{JPSPLeite} for improving the Portuguese translation.
 
 \vspace{0.5cm}
 \textbf{\large{8\hspace{0.5cm}Disclaimer}}
